--- a/.gitignore
+++ b/.gitignore
@@ -189,3 +189,100 @@ def comment(request):
  
 </body>
 </html>
+
+
+
+
+<header>
+      
+    <div class="container mb-5">
+      <div class="profile-user-settings">
+        <a href="{% url 'main'%}" class="btn profile-edit-btn btn-btn-dark">Home Page</a>
+      </div>
+    </div>
+      
+    <div class="container">
+      <div class="profile">
+        <div class="profile-image">
+
+          {% if user.profile.profile_pic  %}
+          <img src="{{ user.profile.profile_pic.url  }}" alt="" height="150px" width="150px">
+          {% else %}
+          <img src="{% static 'images/Screenshot from 2021-02-22 05-00-53.png' %}" alt="User" />
+          {% endif%}
+
+        </div>
+        <div class="profile-user-settings">
+          <h1 class="profile-user-name text-capitalize">{{user.profile.user.username}}</h1>
+          <a href="{% url 'edit_profile'%}" class="btn profile-edit-btn">Edit Profile</a>
+          <button class="btn profile-settings-btn" aria-label="Profile Settings">
+            <i class="fas fa-cog" aria-hidden></i>
+          </button>
+        </div>
+
+
+        <div class="profile-stats">
+          <ul>
+            <li><span class="profile-stat-count"></span>Posts</li>
+            <li><span class="profile-stat-count"></span>Followers</li>
+            <li><span class="profile-stat-count"></span>Following</li>
+          </ul>
+        </div>
+
+
+        <div class="profile-bio">
+          <p><span class="profile-real-name text-capitalize">{{user.profile.user.username}}</span> <br class="text-capitalize">  {{user.profile.bio}}</p>
+        </div>
+      <!-- Profile Section --> 
+      </div>
+    </div>
+        <!-- End of Container-->      
+    </header>
+    <main>
+      <div class="container">
+        <div class="gallery">
+
+          {% for image in image%}
+          <div class="gallery-item" tabindex="0">
+            <img src="{{image.image.url}}"  alt="Gallery-1" class="gallery-image">
+            <a href="{% url 'viewphoto' %}" class="btn profile-edit-btn">View Photo</a>
+            <div class="gallery-item-info">
+              <ul>
+                <li class="gallery-item-likes"><span class="visually-hidden">Likes:</span><i class="fas fa-heart" aria-hidden>56</i></li>
+                <li class="gallery-item-comments"><span class="visually-hidden">Comments:</span><i class="fas fa-comment" aria-hidden>2</i></li>
+              </ul>
+            </div>
+          </div>
+          {% endfor %}
+  
+        </div>
+      </div>
+
+ <!-- End of Gallery-->   
+      <div class="loader"></div>
+    </main>
+  </body>
+</html>
+
+
+{% if obj %}
+              <h3>Success Uploaded: {{img_obj.caption}}</h3>
+              <img src="{{obj.image.url}}" alt="image">
+              {% endif %}
+
+
+
+ 
+    <form method="POST" enctype="multipart/form-data">
+        {% csrf_token %}
+        <fieldset class="form-group">
+            <legend class="border-bottom mb-4">Profile Info</legend>
+            {{ u_form|crispy }}
+            {{ p_form|crispy }}
+        </fieldset>
+        <div class="form-group">
+            <button class="btn btn-outline-info" type="submit">Update</button>
+        </div>
+    </form>
+</body>
+</html>
