--- a/.env
+++ b/.env
@@ -1,3 +1,16 @@
+SECRET_KEY='DQJBLIAMcXgeumv9Kvi4Bg'
+DEBUG=False #set to false in production
+DB_NAME='profile_pic'
+DB_USER='alex'
+DB_PASSWORD='roverson3'
+DB_HOST='127.0.0.1'
+MODE='prod' #set to 'prod' in production
+ALLOWED_HOSTS='.localhost', '.herokuapp.com', '.127.0.0.1'
+DISABLE_COLLECTSTATIC=1
+DATABASE_URL=
+
+
+
 EMAIL_USE_TLS = True
 EMAIL_HOST = 'smtp.gmail.com'
 EMAIL_PORT = 587
