--- a/.env
+++ b/.env
@@ -1,10 +1,10 @@
-SECRET_KEY='DQJBLIAMcXgeumv9Kvi4Bg'
+SECRET_KEY='DQJBLIAMcXgeumv9Kvi4Bgcfg'
 DEBUG=False #set to false in production
-DB_NAME='profile_pic'
+DB_NAME='mellanex'
 DB_USER='alex'
 DB_PASSWORD='roverson3'
 DB_HOST='127.0.0.1'
-MODE='prod' #set to 'prod' in production
+MODE='dev' #set to 'prod' in production
 ALLOWED_HOSTS='.localhost', '.herokuapp.com', '.127.0.0.1'
 DISABLE_COLLECTSTATIC=1
 DATABASE_URL=
