--- a/requirements.txt
+++ b/requirements.txt
@@ -9,11 +9,15 @@ dj-database-url==0.5.0
 Django==3.2.3
 django-bootstrap-v5==1.0.3
 django-bootstrap3==15.0.0
+django-config==0.1.4
 django-csv==1.2
 django-decouple==2.1
+django-gunicorn==0.1.1
 django-heroku==0.3.1
 django-registration==2.4.1
+django-shell==1.0.2
 django-tinymce==3.3.0
+django-utils-six==2.0
 gunicorn==19.9.0
 importlib-metadata==2.1.1
 Pillow==8.2.0
